# FileTabOpenerW

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  README_ja.md  README_ko.md  README_zh_CN.md  README_zh_TW.md
docs/: capture_screenshots.ps1
res/: app.manifest  app.rc  resource.h
src/: app.cpp  app.h  config.cpp  config.h  explorer_opener.cpp  explorer_opener.h  history_section.cpp  history_section.h  i18n.cpp  i18n.h  input_dialog.cpp  input_dialog.h  logger.cpp  logger.h  main.cpp  main_window.cpp  main_window.h  modern_tab_group_section.cpp  modern_tab_group_section.h  tab_group_section.cpp  tab_group_section.h  tab_view.cpp  tab_view.h  theme.h  utils.cpp  utils.h
